# Squiddrone

./: .clang-format  .cproject  .editorconfig  .gitignore  .gitpod.yml  .mergify.yml  .project  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  STM32G431xx.svd  build.sh  build_unittests.sh  check_styleguide.sh  codecov.yml  dir_68267d1309a1af8e8297ef4c3efbcdba.html  generate_coverage.sh  graph_legend.html  index.html  install_arm_toolchain.sh  report_ci_env  run_all_unittests.sh  upload_codecov.sh  upload_report_ci.py  upload_report_ci.sh
.github/: dependabot.yml
cmake/: AddGoogleTest.cmake  (+3 more)
squidDrone/: .clang-format  .cproject  .mxproject  CMakeLists.txt
squidDrone/cmake/: BundleAllTests.cmake  doxygen.cmake  gnu_arm_stm32_toolchain.cmake
squidDrone/docs/: Doxyfile.in
squidDrone/drivers/: CMakeLists.txt
squidDrone/src/: CMakeLists.txt  globals.hpp  main.cpp  test_file.cpp  test_file.hpp  threads.cpp  threads.hpp
squidDrone/src/com/: CMakeLists.txt  ComInterface.hpp  ComMessageBuffer.hpp  com_interface.hpp  com_message_buffer.cpp  com_message_buffer.hpp  nrf24l01.cpp  nrf24l01.hpp
squidDrone/src/i2c/: CMakeLists.txt  i2c.cpp  i2c.hpp  i2c_handler.cpp  i2c_handler.hpp  i2c_interface.hpp  i2c_status.hpp
squidDrone/src/imu/: CMakeLists.txt  generic_imu.hpp  imu_interface.cpp  imu_interface.hpp  inertial_measurement.cpp  inertial_measurement.hpp  mpu9250.cpp  mpu9250.hpp
squidDrone/src/mcu_config/: CMakeLists.txt  clock_config.c  clock_config.h  cordic_config.c  cordic_config.h  crc_config.h  fmac_config.c  fmac_config.h  gpio_config.c  gpio_config.h  i2c_config.c  mcu_settings.c  mcu_settings.h  serial_config.c  serial_config.h  spi_config.c  spi_config.h  stm32g4xx_hal_conf.h  timer_config.c
squidDrone/src/propulsion/: CMakeLists.txt  esc.hpp  letodar_2204.cpp  letodar_2204.hpp  little_bee_20_a.cpp  little_bee_20_a.hpp  motor.hpp  motor_builder.cpp  motor_builder.hpp  propulsion_hardware_config.hpp
squidDrone/src/spi/: spi.cpp  spi.hpp  spi_interface.hpp
squidDrone/src/types/: accelerometer_sensitivity.hpp  basic_types.hpp  com_types.hpp  error_types.hpp  gyroscope_sensitivity.hpp  propulsion_hardware_types.hpp
squidDrone/system/: CMakeLists.txt  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  stm32g4xx_it.h
squidDrone/system/free_rtos/: CMakeLists.txt  FreeRTOSConfig.h
squidDrone/system/hal/: CMakeLists.txt
squidDrone/tests/: CMakeLists.txt  dummy_tests.cpp
squidDrone/tests/com/: com_interface_tests.cpp  com_message_buffer_tests.cpp
squidDrone/tests/i2c/: i2c_interface_tests.cpp  i2c_tests.cpp
squidDrone/tests/imu/: imu_interface_tests.cpp  imu_tests.cpp
squidDrone/tests/imu/mock_libraries/: generic_imu.cpp  generic_imu.hpp
squidDrone/tests/mock_libraries/: i2c_handler.hpp  propulsion_mock_dependencies.hpp  stm32g4xx.h  stm32g4xx_hal_tim.c  stm32g4xx_hal_tim.h
squidDrone/tests/mock_libraries/com/: com_message_buffer_mock.cpp  com_message_buffer_mock.hpp
squidDrone/tests/mock_libraries/i2c/: i2c_config.c  i2c_config.h  stm32g4xx_hal.c  stm32g4xx_hal.h
squidDrone/tests/mock_libraries/imu/: generic_imu.hpp  mpu9250.cpp  mpu9250.hpp
squidDrone/tests/mock_libraries/propulsion/: esc_mock.cpp  esc_mock.hpp  letodar_2204_mock.hpp  little_bee_20_a_mock.hpp  motor_mock.hpp  propulsion_hardware_config_mock.hpp
squidDrone/tests/propulsion/: esc_test.cpp  letodar_2204_test.cpp  little_bee_20_a_test.cpp  motor_test.cpp  motorbuilder_test.cpp  propulsion_hardware_config_test.cpp
squidDrone/tests/spi/: spi_interface_tests.cpp
squidDrone/tests/types/: thrust_vector_test.cpp
src/: main.cpp  (+2 more)
system/: CMakeLists.txt  stm32g4xx_hal_msp.c  stm32g4xx_it.c  stm32g4xx_it.h
system/cmsis/: CMakeLists.txt
system/cmsis/dsp/: CMakeLists.txt
system/hal/: CMakeLists.txt
tests/: CMakeLists.txt
tests/com/: CMakeLists.txt  com_data_packet_tests.cpp  com_interface_tests.cpp  com_interrupt_handler_tests.cpp  com_message_buffer_tests.cpp  com_nrf24l01_core_tests.cpp  com_nrf24l01_spi_protocol_tests.cpp  com_nrf24l01_tests.cpp
tests/com/mock_libraries/: byte_mock.hpp  com_message_buffer_mock.hpp  com_nrf24l01_core_mock.hpp  com_nrf24l01_mock.cpp  com_nrf24l01_mock.hpp  com_nrf24l01_spi_protocol_mock.hpp  mcu_settings.h  ota_config_mock.hpp  sleep_mock.cpp  sleep_mock.hpp  spi.hpp  stm32g4xx_hal.c  stm32g4xx_hal.h  uart_print_mock.cpp  uart_print_mock.hpp
tests/i2c/: CMakeLists.txt  i2c_tests.cpp
tests/i2c/mock_libraries/: i2c_config.h
tests/imu/: CMakeLists.txt  imu_accelerometer_tests.cpp  imu_gyroscope_tests.cpp  imu_integration_tests.cpp  imu_interface_tests.cpp  imu_magnetometer_tests.cpp  imu_mpu9255_tests.cpp  imu_temperature_tests.cpp
tests/imu/mock_libraries/: mock_accelerometer.hpp  mock_gyroscope.hpp  mock_i2c.hpp  mock_magnetometer.hpp  mock_mpu9255.hpp  mock_temperature.hpp
tests/mock_libraries/com/: com_message_buffer_mock.cpp
tests/mock_libraries/i2c/: stm32g4xx_hal.c
tests/mock_libraries/imu/: generic_imu.hpp  i2c.cpp  mock_i2c.hpp  mock_mpu9255.hpp  mpu9250.cpp  mpu9250.hpp
tests/mock_libraries/propulsion/: esc_mock.cpp  esc_mock.hpp  letodar_2204_mock.hpp  little_bee_20_a_mock.hpp  motor_builder_mock.hpp  motor_mock.hpp  stm32g4xx_hal_tim.h
tests/mock_libraries/spi/: gpio_config.c  gpio_config.h  spi_config.h  stm32g4xx_hal.h
tests/propulsion/: CMakeLists.txt  esc_test.cpp  letodar_2204_test.cpp  little_bee_20_a_test.cpp  motor_driver_test.cpp  motor_test.cpp  motorbuilder_test.cpp  propulsion_hardware_config_test.cpp
tests/propulsion/mock_libraries/: esc_mock.hpp  letodar_2204_mock.hpp  motor_builder_mock.hpp  motor_driver_mock.hpp  propulsion_hardware_config_mock.hpp  sleep_mock.cpp  sleep_mock.hpp  stm32g4xx_hal.h  stm32g4xx_hal_def.h  timer_config.h
tests/spi/: CMakeLists.txt  cspin_tests.cpp  spi_interface_tests.cpp  spi_tests.cpp
tests/spi/mock_libraries/: cspin_mock.hpp  mcu_settings.h  spi_config.c  stm32g4xx_hal.c  stm32g4xx_hal.h
tests/types/: CMakeLists.txt  euclidean_vector_test.cpp  ota_config_tests.cpp
tests/utilities/: CMakeLists.txt  utilities_byte_tests.cpp
(+170 files in other folders)
